# basic_uv_proj

./: README.md  pyproject.toml
src/: main.py
